[gd_scene load_steps=6 format=2]

[ext_resource path="res://RaptorRender/GUI/Themes/grey.tres" type="Theme" id=1]
[ext_resource path="res://RaptorRender/GUI/SortableTable/SortableTable.gd" type="Script" id=2]
[ext_resource path="res://RaptorRender/GUI/SortableTable/TopRow/TopRow.gd" type="Script" id=3]
[ext_resource path="res://RaptorRender/GUI/SortableTable/RowContainerFilled.gd" type="Script" id=4]
[ext_resource path="res://RaptorRender/GUI/SortableTable/RowContainerEmpty.gd" type="Script" id=5]

[node name="SortableTable" type="ScrollContainer"]
margin_left = 60.0
margin_top = 54.0
margin_right = 675.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
scroll_vertical_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
row_color = Color( 0.235294, 0.235294, 0.235294, 1 )
row_color_selected = Color( 0.584314, 0.384314, 0.282353, 1 )
row_color_red = Color( 0.392157, 0.247059, 0.231373, 1 )
row_color_blue = Color( 0.231373, 0.313726, 0.392157, 1 )
row_color_green = Color( 0.231373, 0.352941, 0.231373, 1 )
row_color_yellow = Color( 0.345098, 0.352941, 0.231373, 1 )
row_color_black = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="VBox_TopRow_Content" type="VBoxContainer" parent="."]
margin_right = 615.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TopRow" type="MarginContainer" parent="VBox_TopRow_Content"]
margin_right = 615.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="VBox_TopRow_Content/TopRow"]
margin_right = 615.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBox_TopRow_Content/TopRow"]
margin_right = 615.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RowScrollContainer" type="ScrollContainer" parent="VBox_TopRow_Content"]
margin_top = 20.0
margin_right = 615.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer"]
margin_right = 615.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RowContainerFilled" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer"]
margin_right = 615.0
custom_constants/separation = 0
script = ExtResource( 4 )

[node name="ClipContainerForEmptyRows" type="Container" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer"]
margin_right = 615.0
margin_bottom = 235.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RowContainerEmpty" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0
script = ExtResource( 5 )

[node name="AutoScrollTween" type="Tween" parent="."]
[connection signal="draw" from="." to="." method="_on_SortableTable_draw"]
[connection signal="gui_input" from="." to="." method="_on_SortableTable_gui_input"]
[connection signal="gui_input" from="VBox_TopRow_Content/RowScrollContainer" to="." method="_on_RowScrollContainer_gui_input"]
[connection signal="resized" from="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows" to="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows/RowContainerEmpty" method="_on_ClipContainerForEmptyRows_resized"]
